Update project setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "An extensive library for probabilistic circuits"
 readme = "README.md"
 requires-python = ">=3.8"
-dynamic = ["dependencies"]
+dependencies = ["numpy", "pandas"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: GPL-2.0-only License",
@@ -20,6 +20,3 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/MoritzKulessa/PC"
 "Bug Tracker" = "https://github.com/MoritzKulessa/PC/issues"
-
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
