--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "An extensive library for probabilistic circuits"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = ["numpy", "pandas"]
+dependencies = ["scikit-learn", "numpy", "pandas", "matplotlib", "networkx"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: GPL-2.0-only License",
